<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/bottom_navigation_home" />
    <item
        android:id="@+id/navigation_reward"
        android:icon="@drawable/ic_reward"
        android:enabled="true"
        android:title="@string/menu" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:enabled="true"
        android:title="@string/bottom_navigation_profile" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:enabled="true"
        android:title="@string/setting" />

</menu>