<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:tools="http://schemas.android.com/tools"
            tools:context=".user.activity.RegisterActivity">

            <LinearLayout
                android:id="@+id/reg_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/spaceLarge"
                android:layout_marginBottom="@dimen/spaceLarge">

                <ImageView
                    android:id="@+id/img_register_back"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="@dimen/spaceLarge"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/option_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/negate_40"
                    android:textSize="@dimen/xxLargeTextSize"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:id="@+id/toolbar_txt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_login"
                android:layout_below="@id/reg_toolbar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/spaceXSmall"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/xLargeTextSize"
                    android:textColor="@color/colorLightBlue"
                    android:text="@string/sign_in" />

                <TextView
                    android:id="@+id/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/xLargeTextSize"
                    android:textColor="@color/colorLightBlue"
                    android:text="@string/separator" />

                <TextView
                    android:id="@+id/sign_up"
                    android:textSize="@dimen/xLargeTextSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spaceSmall"
                    android:hint="@string/reg_hint_fname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/normalTextSize" />

                <EditText
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spaceLarge"
                    android:hint="@string/reg_hint_lname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/normalTextSize" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spaceLarge"
                    android:hint="@string/reg_hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="@dimen/normalTextSize" />

                <TextView
                    android:id="@+id/email_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spaceXSmall"
                    android:text="@string/email_error"
                    android:textColor="@color/colorPinkCommon"
                    android:textSize="@dimen/smallTextSize"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spaceLarge"
                    android:hint="@string/reg_hint_mobile"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/normalTextSize" />

                <EditText
                    android:id="@+id/pcd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spaceLarge"
                    android:hint="@string/reg_hint_poscode"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/normalTextSize" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleTint="@color/colorLightGrey"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_login_enter_password"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:textSize="@dimen/normalTextSize"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/pwd_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spaceXSmall"
                    android:text="@string/password_error"
                    android:textColor="@color/colorPinkCommon"
                    android:textSize="@dimen/smallTextSize"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleTint="@color/colorLightGrey"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reg_hint_confirm_pwd"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:textSize="@dimen/normalTextSize"/>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/btn_fb_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/std_btn_height"
                    android:layout_marginTop="@dimen/spaceNormal"
                    android:background="@drawable/bg_btn_fb"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/img_size_20"
                        android:layout_height="@dimen/img_size_20"
                        android:src="@drawable/icon_fb"
                        android:layout_marginStart="@dimen/spaceXSmallEven"
                        android:layout_weight="0"
                        android:layout_gravity="center"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:layout_marginLeft="-26dp"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fb_login"
                            android:textColor="@color/colorWhite"
                            android:layout_gravity="center"
                            android:foregroundGravity="center"
                            android:textSize="@dimen/normalTextSize"
                            android:gravity="center" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:background="@color/colorLightBrown"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/std_btn_height"
                    android:text="Login"
                    android:layout_marginTop="@dimen/gap_spc"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/normalTextSize"
                    android:textAllCaps="false" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ll_login2"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/gap_spc"
                    android:layout_marginBottom="@dimen/spaceLarge"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have"
                        android:textColor="@color/colorBlue"/>

                    <TextView
                        android:id="@+id/gosignin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/gap_spc"
                        android:textColor="@color/colorOrange"
                        android:text="@string/sign_in" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/img"
                android:layout_width="@dimen/img_size_60"
                android:layout_height="@dimen/img_size_60"
                android:layout_below="@+id/ll_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/spaceLarge"
                android:src="@drawable/reg_camera" />
        </RelativeLayout>
    </ScrollView>
</layout>