<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <ScrollView android:layout_width="match_parent"
       android:layout_height="wrap_content">
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          xmlns:tools="http://schemas.android.com/tools"
          tools:context=".user.activity.LoginActivity">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spaceLarge"
             android:layout_marginBottom="@dimen/spaceLarge"
             android:gravity="center"
             android:id="@+id/ll_toolbar">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center"
                android:textSize="@dimen/xxLargeTextSize"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:id="@+id/toolbar_txt" />

         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/ll_login"
             android:layout_below="@id/ll_toolbar"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/spaceXSmall"
             android:gravity="center_horizontal"
             android:orientation="horizontal">

         <TextView
             android:id="@+id/sign_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/xLargeTextSize"
             android:textColor="@color/colorLightBlue"
             android:text="@string/sign_in" />

         <View
             android:id="@+id/home_separator"
             android:layout_width="3dp"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/spaceLarge"
             android:layout_marginEnd="@dimen/spaceLarge"
             android:background="@color/separator"/>

         <TextView
             android:id="@+id/sign_up"
             android:textSize="@dimen/xLargeTextSize"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sign_up" />
         </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_login">

               <ImageView
                   android:id="@+id/img"
                   android:layout_width="@dimen/login_img_width"
                   android:layout_height="@dimen/login_img_height"
                   android:layout_marginTop="@dimen/spaceXXXLarge"
                   android:layout_gravity="center"
                   android:src="@drawable/jenjudan_logo" />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/email_spc"
                   android:layout_marginStart="30dp"
                   android:layout_marginEnd="30dp"
                   android:orientation="vertical">

               <EditText
                   android:id="@+id/email"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_login_enter_email"
                   android:inputType="textEmailAddress"
                   android:maxLines="1"
                   android:textSize="@dimen/normalTextSize" />

               <TextView
                   android:id="@+id/email_error"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="@dimen/spaceXSmall"
                   android:text="@string/email_error"
                   android:textColor="@color/colorPinkCommon"
                   android:textSize="@dimen/smallTextSize"
                   android:visibility="gone" />

                  <com.google.android.material.textfield.TextInputLayout
                      android:id="@+id/pwd"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/spaceNormal"
                      app:passwordToggleTint="@color/colorLightGrey"
                      app:passwordToggleEnabled="true">

                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/hint_login_enter_password"
                         android:maxLines="1"
                         android:inputType="textPassword"
                         android:textSize="@dimen/normalTextSize"/>
                  </com.google.android.material.textfield.TextInputLayout>

               <TextView
                   android:id="@+id/pwd_error"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="@dimen/spaceXSmall"
                   android:text="@string/password_error"
                   android:textColor="@color/colorPinkCommon"
                   android:textSize="@dimen/smallTextSize"
                   android:visibility="gone" />


               <TextView
                   android:id="@+id/fgt_pwd"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end"
                   android:textColor="@color/colorBlue"
                   android:text="@string/fgt_pwd" />

                  <LinearLayout
                      android:id="@+id/btn_fb_login"
                      android:layout_width="match_parent"
                      android:layout_height="@dimen/std_btn_height"
                      android:layout_marginTop="@dimen/spaceXXLarge"
                      android:background="@drawable/bg_btn_fb"
                      android:orientation="horizontal">

                     <ImageView
                         android:layout_width="@dimen/img_size_20"
                         android:layout_height="@dimen/img_size_20"
                         android:src="@drawable/icon_fb"
                         android:layout_marginStart="@dimen/spaceXSmallEven"
                         android:layout_weight="0"
                         android:layout_gravity="center"/>

                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="5"
                         android:layout_marginLeft="-26dp"
                         android:gravity="center">

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/fb_login"
                         android:textColor="@color/colorWhite"
                         android:layout_gravity="center"
                         android:foregroundGravity="center"
                         android:textSize="@dimen/normalTextSize"
                         android:gravity="center" />

                     </LinearLayout>

                  </LinearLayout>

                  <Button
                      android:id="@+id/btn_login"
                      android:background="@color/colorLightBrown"
                      android:layout_width="match_parent"
                      android:layout_height="@dimen/std_btn_height"
                      android:text="Login"
                      android:layout_marginTop="@dimen/gap_spc"
                      android:textColor="@color/colorWhite"
                      android:textSize="@dimen/normalTextSize"
                      android:textAllCaps="false" />

                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/ll_login2"
                         android:gravity="center_horizontal"
                         android:layout_marginTop="@dimen/gap_spc"
                         android:layout_marginBottom="@dimen/spaceLarge"
                         android:orientation="horizontal">

                        <TextView
                            android:id="@+id/register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/don_hav_acc"
                            android:textColor="@color/colorBlue"/>

                        <TextView
                            android:id="@+id/register_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/gap_spc"
                            android:textColor="@color/colorOrange"
                            android:text="@string/sign_up" />
                     </LinearLayout>
                  </LinearLayout>
            </LinearLayout>
      </RelativeLayout>
   </ScrollView>
</layout>