<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_splash"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/ll_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vp_splash"
            android:layout_marginTop="@dimen/negate_140"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spaceXLarge"
                android:layout_marginEnd="@dimen/spaceNormal"
                android:layout_weight="2.5"
                android:background="@color/colorLightBlue3"
                android:text="@string/skip"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spaceNormal"
                android:layout_marginEnd="@dimen/spaceXLarge"
                android:layout_weight="2.5"
                android:background="@color/colorLightBlue3"
                android:text="@string/Next"
                android:textAllCaps="false" />
        </LinearLayout>

        <Button
            android:id="@+id/getStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vp_splash"
            android:layout_marginTop="@dimen/negate_140"
            android:layout_marginStart="@dimen/spaceXLarge"
            android:layout_marginEnd="@dimen/spaceXLarge"
            android:background="@color/colorBrown"
            android:textColor="@color/colorWhite"
            android:text="@string/getstarted"
            android:textAllCaps="false"
            android:visibility="gone"/>


        <LinearLayout
            android:id="@+id/slider_dots"
            android:layout_width="match_parent"
            android:layout_height="@dimen/negate_15"
            android:layout_marginTop="@dimen/spaceLarge"
            android:layout_below="@id/ll_btns"
            android:gravity="center"
            android:orientation="horizontal" />
    </RelativeLayout>
</layout>