<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spaceLarge"
                android:layout_marginBottom="@dimen/spaceLarge"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ev_title"
                    android:layout_gravity="center"
                    android:textSize="@dimen/xxLargeTextSize"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:id="@+id/toolbar_txt" />

            </LinearLayout>

            <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ev_success_img"
                        android:layout_width="@dimen/login_img_width"
                        android:layout_height="@dimen/login_img_height"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/spaceXXXLarge"
                        android:src="@drawable/img_success" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/img_size_50"
                        android:text="@string/youre_good"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:textSize="@dimen/xxxLargeTextSize"
                        android:textColor="@color/colorBlue" />

                    <TextView
                        android:id="@+id/ev_success_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/img_size_50"
                        android:text="@string/ev_success"
                        android:layout_gravity="center_horizontal"
                        android:paddingRight="@dimen/spaceLarge"
                        android:paddingLeft="@dimen/spaceLarge"
                        android:gravity="center"
                        android:textSize="@dimen/normalTextSize"
                        android:textColor="@color/colorBlack" />

                    <Button
                        android:id="@+id/ev_continue"
                        android:background="@color/colorLightBrown"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/std_btn_height"
                        android:text="@string/ev_continue"
                        android:layout_marginTop="@dimen/img_size_50"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/normalTextSize"
                        android:layout_marginStart="@dimen/spaceLarge"
                        android:layout_marginEnd="@dimen/spaceLarge"
                        android:layout_marginBottom="@dimen/spaceLarge"
                        android:textAllCaps="false" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </ScrollView>
</layout>